[package]
name = "dddp"
version = "0.1.0"
authors = ["Ben Pfaff <bpfaff@vmware.com>"]
build = "build.rs"

[lib]
name = "proto"
path = "src/proto/mod.rs"

[[bin]]
name = "p4runtime-cli"
path = "src/main.rs"

[dependencies]
clap = "2.33"
futures = "0.3.5"
grpcio = "0.6.0"
protobuf = "~2"
isatty = "0.1"

[build-dependencies]
protoc-grpcio = "2.0.0"